2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_i82559.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-04-09  Hugo Tyson  <hmt@redhat.com>

	* src/if_i82559.c (i82559_stop): Free up any pending transmissions
	to prevent MBUF store leaks if the calling thread - the one that's
	shutting down the interface - priority ends up higher than (or
	same as) the network service threads.

2002-03-26  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_i82559.c (wait_for_cmd_done): Don't assert if RUC_ADDR_LOAD
	command doesn't clear - on some chips it never does.

2002-03-18  Hugo Tyson  <hmt@redhat.com>

	* src/if_i82559.c (pci_init_find_82559s): Move allocation of
	statistics pointer for each device to here, out of
	i82559_start().  It used to leak PCI window store every time the
	interface cycled down/up.  [Case 107110]

2002-02-25  Mark Salter  <msalter@redhat.com>

	* src/if_i82559.c: Don't call PacketRxReady in standalone configuration
	unless ready to accept a packet. Limit packet delivery to one packet at
	a time in standalone configuration.

2002-02-20  Hugo Tyson  <hmt@redhat.com>

	* include/i82559_info.h: New fields to record/control multicast
	all reception, oversized packet reception and promiscuous mode
	neatly.

	* src/if_i82559.c: Initial support for multicast address reception
	filtering.
	(i82559_restart): New routine to restart the device after fiddling
	with its setup - a tail recursion from i82559_start().
	(i82559_configure): More generic flags passed in and handled.
	(i82559_set_multicast): Routine to pass a set of addresses into
	the device; it works out the bitmap et al for us!
	(i82559_ioctl): Handle new case arms ETH_DRV_SET_MC_LIST and
	ETH_DRV_SET_MC_ALL if defined.  Reset and restart the device,
	diddling its status between.
	
2002-02-19  Mark Salter  <msalter@redhat.com>

	* src/if_i82559.c (pci_init_find_82559s): Don't use IRQ support if